--- a/uqlibrary-filter-group.css
+++ b/uqlibrary-filter-group.css
@@ -34,7 +34,7 @@
 .card-header {
   margin-bottom: 10px;
   font-size: 14pt;
-  color: #00bfa5;
+  color: #009688;
   font-weight: normal; }
   .card-header core-icon {
     position: absolute;
