--- a/uqlibrary-filter-group.scss
+++ b/uqlibrary-filter-group.scss
@@ -11,7 +11,7 @@
 .card-header {
   margin-bottom: 10px;
   font-size: 14pt;
-  color: $accent-A400;
+  color: $teal-500;
   font-weight: normal;
 
   core-icon {
