Changes to timepicker and checkboxes

--- a/uqlibrary-fbs-filter-form.css
+++ b/uqlibrary-fbs-filter-form.css
@@ -55,25 +55,24 @@ paper-input {
 
 md-timepicker::shadow #card {
   border: 1px solid whitesmoke;
-  position: absolute;
   margin-top: 0pt;
-  z-index: 999;
+  margin-bottom: 0pt;
   height: 360px;
   width: 225px; }
-md-timepicker::shadow #display {
-  background-color: #009688 !important;
-  height: 108px;
-  padding: 21.6px;
-  color: white;
-  font-size: 41.4px; }
-  md-timepicker::shadow #display .digit {
-    opacity: 0.7; }
-    md-timepicker::shadow #display .digit[active] {
-      opacity: 1; }
-md-timepicker::shadow #keypad {
-  font-size: 37.8px; }
-  md-timepicker::shadow #keypad .digit {
-    flex-basis: 56.7px; }
+  md-timepicker::shadow #card #display {
+    background-color: #009688 !important;
+    height: 108px;
+    padding: 21.6px;
+    color: white;
+    font-size: 41.4px; }
+    md-timepicker::shadow #card #display .digit {
+      opacity: 0.7; }
+      md-timepicker::shadow #card #display .digit[active] {
+        opacity: 1; }
+  md-timepicker::shadow #card #keypad {
+    font-size: 37.8px; }
+    md-timepicker::shadow #card #keypad .digit {
+      flex-basis: 56.7px; }
 
 paper-slider {
   width: 100%; }
@@ -114,3 +113,15 @@ paper-toast#infoToast {
   border-bottom: 1px solid #f44336; }
   .error::shadow #label {
     color: #f44336; }
+
+/*paper-dialog {
+
+  &#timepickerDialog::shadow {
+    #actions {
+      display: none;
+    }
+    #main {
+      padding: 0px;
+    }
+  }
+}*/
