--- a/uqlibrary-fbs-filter-form.scss
+++ b/uqlibrary-fbs-filter-form.scss
@@ -88,6 +88,7 @@ md-timepicker {
 
         .digit {
           flex-basis: 63px * $timepickerRatio;
+          -webkit-flex-basis: 63px * $timepickerRatio;
         }
 
       }
