--- a/uqlibrary-fbs-filter-form.scss
+++ b/uqlibrary-fbs-filter-form.scss
@@ -182,7 +182,7 @@ paper-toast {
   }
 }
 
-/*paper-dialog {
+core-overlay {
 
   &#timepickerDialog::shadow {
     #actions {
@@ -192,5 +192,6 @@ paper-toast {
       padding: 0px;
     }
   }
-}*/
+}
+
 
